# language_gpt

./: .dockerignore  .env-dev  .env-docker  .gitignore  Dockerfile  README.md  docker-compose.yml  google_creds.temp.json  pyproject.toml
src/poetry_scripts/: __init__.py  project.py
src/project/: __init__.py  main.py
src/project/core/: bot.py  logging.py  settings.py
src/project/core/views/: __init__.py  base.py  dispatcher.py
src/project/db/: mongodb.py
src/project/db/models/: base.py  cache.py  callbacks.py  reviews.py  users.py  words.py
src/project/services/: audios.py  callback_data_actions.py  keyboard.py  openai_gpt.py  reviews.py  text_to_speech.py  user_state_actions.py  users.py
src/project/utils/: timezones.py
src/project/views/: check_sub.py  dummy.py  main.py  reviews.py  routes.py
src/project/views/admin/: main.py  review.py  reviews.py  user.py  users.py
src/project/views/public_groups/: public_group.py  public_groups.py
src/project/views/public_groups_views/: copy_public_group.py  public_group.py  public_groups.py  public_word.py
src/project/views/user_groups/: create_user_group.py  delete_user_group.py  publish_user_group.py  user_group.py  user_groups.py
src/project/views/user_groups_views/: create_user_group.py  delete_user_group.py  publish_user_group.py  user_group.py  user_groups.py
src/project/views/word_learn/: learn_words.py  learning_game.py  utils.py
src/project/views/word_learn_views/: learn_words.py  learning_game.py  utils.py
src/project/views/words/: add_word_translation.py  delete_word.py  edit_word.py  word.py
src/project/views/words_views/: add_word.py  add_word_translation.py  delete_word.py  edit_word.py  edit_word_translation.py  word.py
src/project_scripts/: ask_users_about_review.py
